--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,14 @@
 <resources>
     <string name="app_name">Split</string>
 
-    // Bill list
+    <!-- Bill list -->
     <string name="bill_list_title">Bills</string>
     <string name="add_bill_option">Create a bill</string>
     <string name="add_people_option">Add people</string>
     <string name="add_bottom_sheet_title">Please choose:</string>
     <string name="history_menu_item">History</string>
+
+    <!-- Add People -->
+    <string name="add_people_title">Add people</string>
+    <string name="add_people_hint">Enter a name</string>
 </resources>
