--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <!-- Add People -->
     <string name="add_people_title">Add people</string>
     <string name="add_people_hint">Enter a name</string>
+    <string name="same_name_error">Already have the same name!</string>
+    <string name="no_name_error">Please enter a name!</string>
 </resources>
