--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="add_people_hint">Enter a name</string>
     <string name="same_name_error">Already have the same name!</string>
     <string name="no_name_error">Please enter a name!</string>
+
+    <!-- Add Bill -->
+    <string name="add_good_name_hint">Good name</string>
+    <string name="add_good_price_hint">Price</string>
 </resources>
